opacidade no botão de remover

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             border: none;
             color: red;
             border-radius: 100%;
+            opacity: 0.7;
         }
         .btnadd{
             border-radius: 40px;
