--- a/index.html
+++ b/index.html
@@ -1,68 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styless.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Google Keep</title>
-    <style>
-        body, html {
-            height: 100%;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: black;
-        }
-        #container {
-            position: absolute;
-            background-color: rgb(49, 48, 48);
-            opacity: 0.8;
-            padding: 35px;
-            border-radius: 10px;
-            color: white;
-        }
-        #lista {
-            list-style-type: none;
-            padding: 0;
-        }
-        #lista li {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 5px;
-        }
-        #texto-do-usuario {
-            margin-top: 10px;
-            border-radius: 40px;
-            border: none;
-            background-color: gray;
-            padding: 10px;
-           
-        }
-        #texto-do-usuario::placeholder {
-             color: black;
-        }
-        .btnremover{
-            background-color: black;
-            border: none;
-            color: red;
-            border-radius: 100%;
-            opacity: 0.7;
-            padding: 5px;
-        }
-        .btnadd{
-            border-radius: 40px;
-            border: none;
-            background-color: green;
-            color: white;
-            padding: 10px;
-        }
-        h1{
-            font-size: 30px;
-            color: gray;
-        }
-
-    </style>
     <script>
         let indiceDaLista = 0;
 
